modal overflow issues

--- a/style.css
+++ b/style.css
@@ -466,12 +466,11 @@ footer a:hover {
 	right: 0;
 	min-height: 100%;
 	background: hsl(139, 34%, 81%);
-	width: clamp(300px, 100%, 500px);
 	padding: 1rem;
 	z-index: 100;
 	transition: all 0.5s ease-in-out;
 	transform: translateX(100%);
-	overflow: hidden;
+	width: 0;
 }
 .cart-li {
 	color: #fafacc;
@@ -479,6 +478,8 @@ footer a:hover {
 }
 
 .cart-modal.show {
+	width: clamp(300px, 100%, 500px);
+
 	transform: translateX(0);
 }
 
